fixed issue with hamburger menu on mobile

--- a/themes/josiahstheme/static/css/style.css
+++ b/themes/josiahstheme/static/css/style.css
@@ -131,3 +131,7 @@ img {
 hr {
     border-color: var(--border);
 }
+
+button > svg {
+    color: var(--text);
+}
